# issue-leptos-wasm-split

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  justfile
src/: lib.rs  main.rs
src/lazy_routes/: mod.rs
src/pages/: mod.rs
