[package]
name = "leptos-lazy-routes-issue"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "leptos-lazy-routes-issue"
path = "src/main.rs"

[features]
hydrate = ["leptos/hydrate", "leptos_router/ssr"]
csr = ["leptos/csr"]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "dep:tokio",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
]

[dependencies]
leptos = { version = "0.8.5" }
leptos_router = { version = "0.8.5" }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

# SSR dependencies
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
leptos_axum = { version = "0.8.5", optional = true }
http = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.leptos]
output-name = "leptos-lazy-routes-issue"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
hashed = true
name="app"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1